@@ -538,7 +538,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories 
 # with spaces.
 
-INPUT                  = ./src ./src/gui ../../telescope_server/src
+INPUT                  = ./src ./src/gui ./src/clients ./src/servers
 
 # This tag can be used to specify the character encoding of the source files 
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is 
